# APImanage

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.en.md  README.md  README.zh-CN.md  docker-compose.yml  start.bat  start.sh  test_sdk.py  zhipu-pricing.csv
backend/: .env.example  Dockerfile  requirements.txt
backend/apps/alerts/: cleanup.py  models.py  models_notification.py  models_retention.py  serializers.py  serializers_retention.py  serializers_settings.py  tasks.py  urls.py  urls_notification.py  urls_retention.py  urls_settings.py  views.py  views_notification.py  views_retention.py  views_settings.py
backend/apps/gateway/: cache.py  health.py  middleware.py  models.py  models_routing.py  monitoring.py  serializers.py  serializers_routing.py  services.py  urls.py  urls_health.py  urls_keys.py  urls_metrics.py  urls_providers.py  urls_report.py  urls_routing.py  views.py  views_health.py  views_keys.py  views_metrics.py  views_providers.py  views_report.py  views_routing.py
backend/apps/pricing/: models.py  serializers.py  services.py  urls.py  urls_trial.py  views.py  views_trial.py
backend/apps/stats/: urls.py  (+2 more)
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/scripts/: seed_pricing.py
backend/utils/: cost_calculator.py  encryption.py  http_client.py  rate_limiter.py  token_counter.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
nginx/: nginx.conf
scripts/: init_db.sql
sdk/: README.md  pyproject.toml
sdk/aimanage/: __init__.py  monitor.py
(+51 files in other folders)
